# defeederated

./: Cargo.toml
src/: database.rs  main.rs  templates.rs  views.rs
